# shiny-treeview

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  outdated-js.yml  snapshot-tests.yml
docs/: .gitignore  _quarto.yml  examples.qmd  examples.quarto_ipynb
docs/examples/basic/: app.py
docs/examples/checkbox/: app.py
docs/examples/checkbox-selection/: app.py
docs/examples/file-browser/: app.py  requirements.txt
docs/examples/multiple-selection/: app.py
docs/examples/org-chart/: app.py
docs/examples/selection-modes/: app.py  data.py
example-app/: app.py
shiny_treeview/: __init__.py  data.py  playwright.py  stratify.py  tree.py  treeview.py  ui.py  utils.py
shiny_treeview/distjs/: index.js
srcts/: index.ts  treeview.ts  treeview.tsx
tests/: __init__.py  test_tree.py  test_utils.py
tests/playwright/: __init__.py  app.py  conftest.py  controller.py  test_snapshot.py  test_treeview.py  test_ui.py
tests/playwright/basic/: app.py  test_basic.py
tests/playwright/checkbox/: test_checkbox.py
tests/playwright/disabled/: test_disabled.py
tests/playwright/modules/: test_modules.py
tests/pytest/: __init__.py
