[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny-treeview"
version = "0.1.0"
description = "A Shiny for Python extension providing MUI RichTreeView component"
authors = [{ name = "David Hall", email = "david.hall.physics@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["shiny", "python", "tree-view", "mui", "react", "web-components"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["shiny >= 0.6.0", "htmltools >= 0.6.0"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "playwright", "pytest-playwright", "black", "isort", "quartodoc"]

[project.urls]
Homepage = "https://github.com/davidchall/shiny-treeview"
Documentation = "https://github.com/davidchall/shiny-treeview#readme"
Repository = "https://github.com/davidchall/shiny-treeview.git"
"Bug Tracker" = "https://github.com/davidchall/shiny-treeview/issues"

[tool.setuptools]
packages = ["shiny_treeview"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"shiny_treeview" = ["distjs/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--browser", "chromium"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | srcts
  | distjs
)/
'''

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["shiny_treeview", "tests"]
skip_glob = ["**/distjs/*", "**/node_modules/*"]
known_first_party = ["shiny_treeview"]
known_third_party = ["shiny", "htmltools", "playwright"]
